discussion/kv_engine/183373/183373_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit 'd820c4861' into 'couchbase/master'

Note on manifest.fbs

history has been placed before metered as history comes in 7.2
and metered comes in 7.5. Both default to false if not present
in the manifest found in the data dir.

* commit 'd820c4861':
  MB-54516: Add "history" key to Collection's Manifest

Change-Id: I5de22224de344946c73dc72b7a1279952eaef86b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-29 14:55:37.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-29 15:53:34.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22025/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10: error: "stats_config.def.h" file not found [clang-diagnostic-error]
#include "stats_config.def.h" // NOLINT(*)
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22025/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10:
error: "stats_config.def.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22025/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23546/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/160]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2308 Test failed: `" (Expected `314356" to be less than or equal to `301541" - Unexpected fileSize for vbucket)
[2022-11-29T15:21:53.043Z] (210 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23546/ )

Failure of GoogleTest "ThrottleTest.OpsAreThrottled":

<pre>
[ RUN      ] ThrottleTest.OpsAreThrottled
[2022-11-29T15:21:13.879Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-29T15:21:13.879Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 2
[2022-11-29T15:21:13.879Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-29T15:21:13.879Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 2
[2022-11-29T15:21:13.879Z] [  FAILED  ] ThrottleTest.OpsAreThrottled (3965 ms)
ThrottleTest.OpsAreThrottled
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23546/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43068/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51306/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11832/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11742/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25329/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21541/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32479/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/775/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24063/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24476/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
